--- a/app/src/main/res/layout/item_note_tareas.xml
+++ b/app/src/main/res/layout/item_note_tareas.xml
@@ -29,7 +29,7 @@
         android:layout_marginRight="5dp"
         android:layout_marginBottom="5dp"
         android:layout_weight="1"
-        android:background="#4CAF50"
+        android:background="#5EA5E4"
         android:orientation="vertical">
 
         <LinearLayout
@@ -40,7 +40,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1.2"
+                android:layout_weight="1.4"
                 android:orientation="vertical"
                 android:visibility="visible">
 
@@ -71,7 +71,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1.2"
+                android:layout_weight="1.35"
                 android:orientation="vertical"
                 android:visibility="visible">
 
@@ -102,7 +102,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1.2"
+                android:layout_weight="1.35"
                 android:orientation="vertical"
                 android:visibility="visible">
 
@@ -133,7 +133,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_weight="0.8"
                 android:orientation="vertical">
 
                 <TextView
@@ -163,7 +163,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1.2"
+                android:layout_weight="1.3"
                 android:orientation="vertical">
 
                 <TextView
@@ -193,7 +193,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1.2"
+                android:layout_weight="1.3"
                 android:orientation="vertical">
 
                 <TextView
