--- a/app/src/main/res/layout/dialog_scrap.xml
+++ b/app/src/main/res/layout/dialog_scrap.xml
@@ -82,6 +82,7 @@
             android:id="@+id/spinner"
             android:layout_width="wrap_content"
             android:layout_height="88dp"
+            android:layout_marginStart="8dp"
             android:layout_marginEnd="32dp"
             android:entries="@array/UNIDADES"
             app:layout_constraintBottom_toTopOf="@+id/scrap_btn_confirmar"
@@ -93,14 +94,14 @@
 
         <EditText
             android:id="@+id/et_numero"
-            android:layout_width="111dp"
+            android:layout_width="200dp"
             android:layout_height="88dp"
             android:layout_marginStart="32dp"
             android:layout_marginTop="4dp"
             android:cursorVisible="true"
             android:ems="10"
             android:inputType="number"
-            android:maxLength="4"
+            android:maxLength="6"
             android:numeric="decimal"
             android:selectAllOnFocus="true"
             android:text="1"
