--- a/app/src/main/res/layout/item_note_bobina.xml
+++ b/app/src/main/res/layout/item_note_bobina.xml
@@ -71,7 +71,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1.1"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/textView131"
