--- a/app/src/main/res/layout/dialog_bobina.xml
+++ b/app/src/main/res/layout/dialog_bobina.xml
@@ -54,7 +54,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
                     android:text="NombreTipoMaterial"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:visibility="gone" />
 
                 <Spinner
                     android:id="@+id/dialogbobina_spi_NombreTipoMaterial"
@@ -62,31 +63,7 @@
                     android:layout_height="48dp"
                     android:layout_weight="2"
                     android:entries="@array/material"
-                    tools:ignore="TouchTargetSizeCheck" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/lyb_ProveedorNombre"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/textView19"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="4"
-                    android:text="ProveedorNombre"
-                    android:textSize="20sp" />
-
-                <Spinner
-                    android:id="@+id/dialogbobina_spi_ProveedorNombre"
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:layout_weight="2"
-                    android:entries="@array/material"
+                    android:visibility="gone"
                     tools:ignore="TouchTargetSizeCheck" />
             </LinearLayout>
 
@@ -210,6 +187,31 @@
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
                 android:layout_weight="1" />
+
+            <LinearLayout
+                android:id="@+id/lyb_ProveedorNombre"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView19"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="4"
+                    android:text="ProveedorNombre"
+                    android:textSize="20sp" />
+
+                <Spinner
+                    android:id="@+id/dialogbobina_spi_ProveedorNombre"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:layout_weight="2"
+                    android:entries="@array/material"
+                    tools:ignore="TouchTargetSizeCheck" />
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/ly_trece"
