--- a/app/src/main/res/layout/item_note_produccion.xml
+++ b/app/src/main/res/layout/item_note_produccion.xml
@@ -141,7 +141,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="2"
-                        android:text="Rollos Empaquetados"
+                        android:text="Rollos Producidos"
                         android:textColor="@color/white"
                         android:textSize="12sp" />
 
