--- a/app/src/main/res/layout/item_note_bobina.xml
+++ b/app/src/main/res/layout/item_note_bobina.xml
@@ -159,7 +159,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView12"
+                    android:id="@+id/item_produccion_txtview_RollosEmpaquetados"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="2"
