--- a/app/src/main/res/layout/item_note_produccion.xml
+++ b/app/src/main/res/layout/item_note_produccion.xml
@@ -137,11 +137,11 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/textView12"
+                        android:id="@+id/item_produccion_txtview_RollosEmpaquetados"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="2"
-                        android:text="Rollos Producidos"
+                        android:text="Rollos Empaquetados"
                         android:textColor="@color/white"
                         android:textSize="12sp" />
 
