--- a/app/src/main/res/layout/activity_produccion.xml
+++ b/app/src/main/res/layout/activity_produccion.xml
@@ -13,6 +13,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/fondo"
+        android:backgroundTint="#D38A1E"
         android:text="FIN DE TURNO"
         android:textColor="@color/white"
         android:textSize="20sp"
@@ -715,6 +716,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/fondo"
+        android:backgroundTint="#118C16"
         android:text="FIN DE TRABAJO"
         android:textColor="@color/white"
         android:textSize="20sp"
@@ -727,7 +729,7 @@
         android:layout_height="60dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/fondo"
-        android:backgroundTint="#F44336"
+        android:backgroundTint="#B82E24"
         android:text="CANCELAR TRABAJO"
         android:textColor="@color/white"
         android:textSize="20sp"
