--- a/app/src/main/res/layout/dialog_fin_trabajo.xml
+++ b/app/src/main/res/layout/dialog_fin_trabajo.xml
@@ -16,8 +16,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <Button
-            android:id="@+id/cierre_btn_finincompleto"
+        Button
+            android:id="@+id/cierre_btn_findetareasinterminar"
             android:layout_width="600dp"
             android:layout_height="100dp"
             android:layout_marginStart="16dp"
@@ -38,7 +38,7 @@
             android:layout_marginStart="100dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="100dp"
-            android:text="FIN DE TURNO"
+            android:text="FIN DE TRABAJO"
             android:textColor="@color/black"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -74,13 +74,12 @@
             app:layout_constraintTop_toBottomOf="@+id/textView33" />
 
         <Button
-            android:id="@+id/cierre_btn_finterminado"
+            android:id="@+id/cierre_btn_findetrabajoterminado"
             android:layout_width="600dp"
             android:layout_height="100dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="32dp"
+            android:layout_marginBottom="16dp"
             android:backgroundTint="#208C24"
             android:text="TRABAJO QUEDO TERMINADO"
             android:textSize="20sp"
@@ -88,7 +87,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cierre_btn_finincompleto" />
+            app:layout_constraintTop_toBottomOf="@+id/edit_motivo" />
 
         <Button
             android:id="@+id/cierre_btn_cancelar"
