--- a/app/src/main/res/layout/dialog_num.xml
+++ b/app/src/main/res/layout/dialog_num.xml
@@ -32,7 +32,7 @@
 
         <Button
             android:id="@+id/cantidad_btn_confirmar"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="80dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
@@ -48,7 +48,7 @@
 
         <Button
             android:id="@+id/cantidad_btn_cancelar"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="80dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
