--- a/app/src/main/res/layout/dialog_num.xml
+++ b/app/src/main/res/layout/dialog_num.xml
@@ -71,7 +71,8 @@
             android:layout_marginEnd="32dp"
             android:cursorVisible="true"
             android:ems="10"
-            android:inputType="number"
+            android:inputType="phone"
+            android:digits="0123456789,"
             android:maxLength="5"
             android:numeric="integer"
             android:selectAllOnFocus="true"
