--- a/app/src/main/res/layout/dialog_cancelar_motivo.xml
+++ b/app/src/main/res/layout/dialog_cancelar_motivo.xml
@@ -39,7 +39,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="100dp"
             android:text="MOTIVO PARA CANCELAR EL TRABAJO"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:text="Describir motivo:"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
