--- a/app/src/main/res/layout/dialog_fin_turno.xml
+++ b/app/src/main/res/layout/dialog_fin_turno.xml
@@ -39,7 +39,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="100dp"
             android:text="FIN DE TURNO"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:text="Detalle del trabajo"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
